# openrtb26

./: Cargo.toml  README.md
src/: audio.rs  banner.rs  bid.rs  content.rs  device.rs  format.rs  imp.rs  lib.rs  native.rs  pmp.rs  seat_bid.rs  segment.rs  site.rs  supply_chain.rs  video.rs
src/request/: app.rs  audio.rs  banner.rs  brand_version.rs  channel.rs  content.rs  data.rs  device.rs  dooh.rs  dur_floors.rs  eid.rs  format.rs  geo.rs  imp.rs  mod.rs  network.rs  pmp.rs  producer.rs  publisher.rs  qty.rs  refresh.rs  refsettings.rs  regs.rs  site.rs  source.rs  uid.rs  user.rs  user_agent.rs  video.rs
src/response/: bid.rs  mod.rs
