[package]
name = "openrtb26"
version = "0.1.0"
edition = "2021"
description = "OpenRTB 2.6 implementation in Rust"
license = "MIT"
homepage = "https://iabtechlab.com/standards/openrtb/"
repository = "https://github.com/fprotimaru/openrtb26"
readme = "README.md"
keywords = ["openrtb", "rtb", "advertising", "programmatic"]
categories = ["encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
